# rsc

./: .gitignore  README.md  requirements.txt  setup.cfg
src/rsс/: base.py  connections.py  exceptions.py
tests/: test_base.py  test_connections.py
