[metadata]

name = rsc
version = 0.3.5.1
author = Mihail Tsarev
author_email = mtsarev06@gmail.com
description = Library with utils for managing files on remote machines.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mtsarev06/rsc
project_urls =
    Bug Tracker = https://github.com/mtsarev06/rsc/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires=
    pysmb ==1.2.7
    paramiko ==2.11.0
    avmwc >=0.2.0.3
    pyzipper ==0.3.6

[options.packages.find]
where = src
